<resources>
    <string name="app_name">MusicalStructure</string>
    <string name="main_activity">Artists</string>
    <string name="artists_activity">Artists</string>
    <string name="folders_activity">Folders</string>
    <string name="search_activity">Search</string>
    <string name="now_playing">Now playing</string>
    <string name="todo_artists">Currently found files in an Artist order. Play button next to every file. </string>
    <string name="todo_folders">Folders view allowing to access sdcard. Play button next to every file.</string>
    <string name="todo_now_playing">All music player functions, including progress bar, all buttons necessary in music app, volume control, cover, title, meta data. Implementation of MediaPlayer class and AudioManager </string>
    <string name="todo_search">Search field allowing to type any whim and below the results of the search. Play button next to every file.</string>
</resources>
